# Tiago_grasping_on_the_move

./: README.md
tiago_grasping_on_the_move/: CMakeLists.txt  package.xml  setup.py
tiago_grasping_on_the_move/launch/: tiago_arm.launch  tiago_grasping_on_the_move.launch
tiago_grasping_on_the_move/scripts/: tiago_arm  tiago_grasping_on_the_move
tiago_grasping_on_the_move/src/tiago_grasping_on_the_move/BaseController/: base_controller.py  base_controller_backup.py  plots.py  stop_base_controller.py  tangent_point.py
tiago_grasping_on_the_move/src/tiago_grasping_on_the_move/Plots/: plots.py  show_arm_results.py  show_base_results.py  trajectory.py
tiago_grasping_on_the_move/src/tiago_grasping_on_the_move/TIAgoArm/: ReducedModel.py  arm_and_base_backup.py  arm_controller_command_topic.py  qp_arm_and_base.py  quaternion.py  stop_tiago_ik.py  tiago_ik.py
worlds/: post_ball_polygonbox copy.world  post_ball_polygonbox.world
