<?xml version="1.0"?>
<package format="2">
  <name>tiago_grasping_on_the_move</name>
  <version>0.0.0</version>
  <description>The tiago_grasping_on_the_move package</description>
  <maintainer email="dorazio@diag.uniroma1.it">Francesco D'Orazio</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>interactive_markers</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>interactive_markers</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
